<resources>
    <string name="app_name">购物kuang</string>
    <string name="title_home">首页</string>
    <string name="title_topic">专题</string>
    <string name="title_category">分类</string>
    <string name="title_shopping">购物车</string>
    <string name="title_main">我的</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>