<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.goshopkuang.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_topic"
        android:name="com.example.goshopkuang.view.topic.TopicFragment"
        android:label="@string/title_topic"
        tools:layout="@layout/fragment_topic" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.goshopkuang.view.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.goshopkuang.view.shop.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.goshopkuang.view.main.mine.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />
</navigation>